# jazzware-account-intel

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260511_0001_init.py
hubspot-ui/: .gitignore  README.md  hsproject.json  package.json
hubspot-ui/src/app/: app.json
hubspot-ui/src/app/app.functions/: fetchAccount.js  sample-account.json  serverless.json
hubspot-ui/src/app/extensions/: CustomerBrainCard.json  CustomerBrainCard.jsx
src/account_intel/: config.py
src/account_intel/api/: app.py
src/account_intel/db/: __init__.py  models.py  session.py
src/account_intel/feeders/: __init__.py  hubspot.py
src/account_intel/rollup/: __init__.py  service.py
src/account_intel/rollup/prompts/: system.md
src/account_intel/scripts/: seed_demo.py
src/account_intel/ui/: _common.py  _theme.py  client_app.py  internal_app.py
src/health/: api.py
systemd/: account-intel-api.service  account-intel-feeder.service  account-intel-feeder.timer  account-intel-ui-client.service  account-intel-ui-internal.service
tests/: conftest.py  test_api_unit.py  test_feeder_unit.py  test_health_api.py  test_rollup_unit.py
