[project]
name = "account-intel"
version = "0.1.0"
description = "Unified per-customer intelligence: HubSpot signals → Claude roll-up → risk/narrative/next-best-actions"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "tenacity>=9.0",
  "anthropic>=0.40",
  "streamlit>=1.40",
  "pandas>=2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
